--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = compuational_experiment
+name = computational_experiment
 version = 0.1.0
 license = BSD-2 Clause License
 description = A framework for declaring and executing computational experiments
